# face-recognition-2

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp  workspace.code-workspace
src/: CMakeLists.txt  image.cpp  image.h  keras.cpp  keras.h  myfile.cpp  myfile.h  opencv_client.cpp  opencv_client.h  opencv_video.cpp  opencv_video.h
